Fix overflows in Main Menu and Schedule at 767px

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -23,6 +23,10 @@ a {
   text-decoration: none;
 }
 
+button {
+  border: none;
+}
+
 /* Hidden Headers for SEO purposes */
 .hidden {
   position: absolute;
@@ -33,6 +37,7 @@ a {
 .container {
   max-width: 1013px;
   margin: 0 auto;
+  padding: 0 15px;
 }
 
 /* Container Two */
@@ -59,7 +64,7 @@ a {
 /* Side Menu */
 .side-menu {
   position: absolute;
-  right: 15px;
+  right: 30px;
   bottom: -35px;
   display: flex;
   font-size: 14px;
@@ -142,7 +147,7 @@ a {
 .header > ul {
   display: flex;
   justify-content: flex-end;
-  padding: 7px 0;
+  padding: 7px 15px;
   color: #fff;
   font-size: 13px;
 }
@@ -171,6 +176,7 @@ a {
 
 .header div > a {
   display: block;
+  /* flex-shrink: 0; */
   width: 210px;
   height: 60px;
   background: url("../images/smlogo.svg") no-repeat;
@@ -178,15 +184,17 @@ a {
 
 .main-menu {
   flex-grow: 1;
+  flex-shrink: 0;
   display: flex;
   align-items: center;
-  margin-left: 200px;
+  margin-left: 175px;
   height: 40px;
   font-size: 14px;
 }
 
 .main-menu li {
   flex: 1 auto;
+  padding-right: 5px;
 }
 
 .main-menu li:first-child,
@@ -196,6 +204,7 @@ a {
 
 .main-menu li:last-child {
   border: 3px solid var(--secondary-color);
+  padding-right: 0;
   height: 100%;
   line-height: 33px;
   text-align: center;
@@ -206,6 +215,22 @@ a {
   width: 100%;
 }
 
+.main {
+  position: relative;
+}
+
+.main > button {
+  position: absolute;
+  top: 20px;
+  left: 25px;
+  display: none;
+  background: none;
+}
+
+.main .fa-bars {
+  font-size: 45px;
+}
+
 /* Intro */
 .intro {
   min-height: calc(100vh - 90px);
@@ -214,7 +239,7 @@ a {
 }
 
 .intro div {
-  padding: 90px 0;
+  padding: 90px 15px;
 }
 
 .intro div > span {
@@ -258,7 +283,7 @@ a {
 }
 
 .schedule div {
-  padding: 40px 0 60px 0;
+  padding: 40px 15px 60px;
   text-align: center;
 }
 
@@ -272,10 +297,8 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
   margin-right: 3px;
   padding: 15px 10px;
-  height: 150px;
   background: rgba(211, 211, 211, 0.2);
 }
 
@@ -283,6 +306,14 @@ a {
 
 .schedule li:nth-of-type(4) {
   border: 2px solid #fff;
+}
+
+.schedule li > * {
+  margin-bottom: 10px;
+}
+
+.schedule li span:last-child {
+  margin-bottom: 0;
 }
 
 .schedule .fas,
@@ -307,7 +338,7 @@ a {
 
 /* Speakers */
 .speakers {
-  padding: 40px 0 60px 0;
+  padding: 40px 15px 60px;
 }
 
 .speakers > div {
@@ -372,7 +403,7 @@ a {
 }
 
 .partners div {
-  padding: 30px 0 30px 0;
+  padding: 30px 15px;
 }
 
 .partners ul {
@@ -407,8 +438,7 @@ a {
 }
 
 .conf-info div {
-  /* position: relative; */
-  padding: 75px 0;
+  padding: 75px 15px;
 }
 
 .conf-info h3 {
@@ -453,7 +483,7 @@ a {
 }
 
 .conf-logo div {
-  padding: 35px 0 28px 0;
+  padding: 35px 15px 28px;
 }
 
 .conf-logo p {
@@ -473,7 +503,7 @@ a {
 
 /* Past Events */
 .past-events {
-  padding: 35px 0 80px 0;
+  padding: 35px 15px 80px;
   text-align: center;
 }
 
@@ -532,8 +562,7 @@ form {
 }
 
 .pricing div {
-  /* position: relative; */
-  padding: 65px 0;
+  padding: 65px 15px;
 }
 
 .pricing table {
@@ -556,6 +585,16 @@ form {
   padding: 15px 20px;
 }
 
+.pricing thead td:nth-of-type(2) {
+  padding-left: 95px;
+  padding-right: 95px;
+}
+
+.pricing thead td:last-child {
+  padding-left: 55px;
+  padding-right: 55px;
+}
+
 .pricing tbody th {
   vertical-align: middle;
 }
@@ -572,7 +611,7 @@ form {
 .meal {
   position: relative;
   margin-bottom: 50px;
-  padding-top: 55px;
+  padding: 55px 15px 0;
   text-align: center;
 }
 
@@ -630,7 +669,6 @@ form {
 
 /* Form Submit Button */
 .meal + button {
-  border: none;
   padding: 12px 35px;
   background: var(--secondary-color);
   font-weight: 700;
@@ -646,7 +684,7 @@ form {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 50px 0;
+  padding: 50px 15px;
 }
 
 .footer div > a {
